Fix T100886: error saving side-by-side stereo EXR image of depth pass

The stereo saving code that combines two image buffers into one did not work
correctly when the number of channels is not equal to 4.